--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 anyhow = "1.0.70"
 camino = "1.1.4"
 log = "0.4.17"
+once_cell = "1.17.1"
+regex = "1.8.1"
 walkdir = "2.3.3"
 
 [dependencies.env_logger]
