--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.70"
 camino = "1.1.4"
+isolang = "2.2.0"
 log = "0.4.17"
 once_cell = "1.17.1"
 regex = "1.8.1"
