--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
 name = "subfix"
+description = "Creates symlinks to help Jellyfin find all your subtitles"
+categories = ["command-line-utilities"]
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["alpha-tango-kilo <git@heyatk.com>"]
+readme = "README.md"
+license = "GPL-3.0-only"
+homepage = "https://codeberg.org/alpha-tango-kilo/subfix"
+repository = "https://codeberg.org/alpha-tango-kilo/subfix"
+publish = false
 
 [dependencies]
 anyhow = "1.0.70"
@@ -18,3 +24,6 @@ walkdir = "2.3.3"
 version = "0.10"
 default-features = false
 features = ["auto-color"]
+
+[profile.release]
+lto = true
