Flesh out README

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ description = "Creates symlinks to help Jellyfin find all your subtitles"
 categories = ["command-line-utilities"]
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.65"
 authors = ["alpha-tango-kilo <git@heyatk.com>"]
 readme = "README.md"
 license = "GPL-3.0-only"
